src/test/resources/good/provided/extensions/objects2/iterate-over-subtype.lat
class X {
	int x;

	void foo() {
		x = 42;
	}
}

class Y extends X {
	void foo() {
		x = 142;
	}
}

int main() {
	Y[] arry = new Y[1];
	arry[0] = new Y;
	for (X x : arry) {
		x.foo();
		if (x.x != 142) error();
	}
	return 0;
}
